--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "echarts": "https://github.com/thingsboard/echarts/archive/5.5.0-TB.tar.gz",
     "flot": "https://github.com/thingsboard/flot.git#0.9-work",
     "flot.curvedlines": "https://github.com/MichaelZinsmaier/CurvedLines.git#master",
+    "html2canvas": "^1.4.1",
     "moment": "^2.30.1",
     "playwright": "^1.53.1",
     "primeicons": "~7.0.0",
